# probably-baysig

./: .gitignore  ChunkedArray.hs  FoldingStats.hs  Guardfile  LICENSE  Makefile  README.md  SamFun.hs  SanityCheck.hs  Setup.lhs  TestStats.hs  plotTrace.r  probably-baysig.cabal  probably.cabal  testIterLap.hs  testMCMC.hs  testSDE.hs  testUKF.hs
Math/Probably/: BFGS.hs  ChunkedArray.hs  Distribution.hs  Fitting.hs  FoldingStats.hs  FunBUGS.hs  Gibbs.hs  GibbsTyped.hs  GibbsUntyped.hs  GlobalRandoms.hs  HamMC.hs  IterLap.hs  JAGS.hs  KMeans.hs  KS.hs  LinearPDF.hs  MALA.hs  MCMC.hs  NelderMead.hs  PDF.hs  PlotR.hs  RandIO.hs  SDE.hs  SamFun.hs  Sampler.hs  StochFun.hs  Student.hs  Types.hs  Unscented.hs  Utils.hs  Visualise.hs
Strategy/: Hamiltonian.hs  MALA.hs  Metropolis.hs  MetropolisHastings.hs  NUTS.hs  NUTSDualAveraging.hs  RandomWalkMetropolis.hs  Slice.hs
ad-experiments/: Example.hs  README.md  ad-experiments.cabal
ad-experiments/research-code/: .gitignore  Basic.hs  BasicLam.hs  HOAS.hs  Henrik.hs  ObsAppFHOAS.hs  PHOAS.hs  PHOASRec.hs  ParamBasic.hs  ParamHOAS.hs  Reify.hs  SourceTransform.hs  Syntax.hs  Syntax0.hs  Syntax1.hs  Syntax2.hs  Syntax3.hs  Syntax4.hs  Syntax5.hs  Syntax6.hs  Utils.hs  ad-experiments.cabal
src/Math/Probably/: BFGS.hs  Circular.hs  Datasets.hs  EMPCA.hs  FoldingStats.hs  HamMC.hs  KMeans.hs  KMedoids.hs  MCMC.hs  NelderMead.hs  PCA.hs  PDF.hs  ReversibleJump.hs  Sampler.hs  Student.hs  Types.hs  Utils.hs
src/Strategy/: Hamiltonian.hs  MALA.hs  Metropolis.hs  NUTS.hs  NUTSDualAveraging.hs  Slice.hs
test/: PCACheck.hs
