Name:                probably-baysig
Version:             0.4.0
Synopsis:            Probability and Statistics
Description:         Library for Probability and Statistics.
                     .
                     'probably' contains definitions and functions for
                     probabilistic and statistical inference.
                     .
                     * Math.Probably.Sampler defines the sampling function
                       monad, as described by Sungwoo Park and implemented
                       elsewhere (e.g. 'random-fu' and 'monte-carlo' packages)
                     .
                     * Math.Probably.PDF defines some common parametric
                       log-probability density functions
                     .
                     * Math.Probably.FoldingStats defines statistics as folds
                       that can be composed and calculated independently of the
                       container of the underlying data. 
                     .
                     * Math.Probably.StochFun defines stochastic functions and
                       Markov chains
                     .
                     * Math.Probably.MCMC implements Markov Chain Monte Carlo,
                       including importance, rejection and Metropolis-Hastings
                       sampling
                     
License:             GPL
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   ghc-options:       -O2
   ghc-prof-options:  -auto-all

   Exposed-modules:   Math.Probably.Sampler
                    , Math.Probably.Student
                    , Math.Probably.PDF
                    , Math.Probably.NelderMead
                    , Math.Probably.BFGS
                    , Math.Probably.MCMC
                    , Math.Probably.FoldingStats
                    , Strategy.RandomWalkMetropolis
                    , Strategy.Hamiltonian

                    , Target.Prelude
                    , Target.Regression
                    , Target.Logistic
                    , Target.Heston
                        
   Build-depends:     base
                    , binary
                    , data-default
                    , deepseq
                    , hmatrix
                    , mersenne-random-pure64
                    , monad-par
                    , mtl
                    , spoon
                    , statistics
                    , vector

                    , math-functions
                    , records
                    , type-functions
                    , kinds
                    , storable-tuple
                    , array
                    , text

Executable testMCMC
   Main-Is:           testMCMC.hs
   ghc-options:       -O2 

   Build-depends:     base
                    , mersenne-random-pure64
                    , binary
                    , hmatrix
                    , mtl
                    , spoon
                    , deepseq
                    , vector
                    , data-default
                    , monad-par
                    , statistics

                    , math-functions
                    , records
                    , type-functions
                    , kinds
                    , storable-tuple
                    , array
                    , text
