Name:                probably-baysig
Version:             0.4.0
Synopsis:            Probability and Statistics
Description:         Library for Probability and Statistics.
                     .
                     'probably' contains definitions and functions for
                     probabilistic and statistical inference.
                     .
                     * Math.Probably.Sampler defines the sampling function
                       monad, as described by Sungwoo Park and implemented
                       elsewhere (e.g. 'random-fu' and 'monte-carlo' packages)
                     .
                     * Math.Probably.PDF defines some common parametric
                       log-probability density functions
                     .
                     * Math.Probably.FoldingStats defines statistics as folds
                       that can be composed and calculated independently of the
                       container of the underlying data. 
                     .
                     * Math.Probably.StochFun defines stochastic functions and
                       Markov chains
                     .
                     * Math.Probably.MCMC implements Markov Chain Monte Carlo,
                       including importance, rejection and Metropolis-Hastings
                       sampling
                     
License:             GPL
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   ghc-options:       -O2
   ghc-prof-options:  -auto-all

   Exposed-modules:   Math.Probably.Sampler
                    , Math.Probably.Student
                    , Math.Probably.PDF
                    , Math.Probably.NelderMead
                    , Math.Probably.BFGS
                    , Math.Probably.MCMC
                    , Math.Probably.FoldingStats
                    , Strategy.RandomWalkMetropolis
                    , Strategy.Hamiltonian

                    , Target.Prelude
                    , Target.Regression
                    , Target.Logistic
                    , Target.Heston
                        
   Build-depends:     base                    >= 4.6 && < 5
                    , binary                  >= 0.7.1.0
                    , data-default            >= 0.5.3
                    , deepseq                 >= 1.3.0.1
                    , hmatrix                 >= 0.15
                    , mersenne-random-pure64  >= 0.2.0.3
                    , monad-par               >= 0.3.4.2
                    , mtl                     >= 2.1.2
                    , spoon                   >= 0.3.1
                    , statistics              >= 0.10.4.1
                    , vector                  >= 0.10.0.1

                    , math-functions          >= 0.1
                    , records                 >= 0.1
                    , type-functions          >= 0.2
                    , kinds                   >= 0.0
                    , storable-tuple          >= 0.0
                    , array                   >= 0.5
                    , text                    >= 1.1

Executable SanityCheck
   Main-Is:           SanityCheck.hs
   ghc-options:       -O2 

   Build-depends:     base
                    , mersenne-random-pure64
                    , binary
                    , hmatrix
                    , mtl
                    , spoon
                    , deepseq
                    , vector
                    , data-default
                    , monad-par
                    , statistics

                    , math-functions
                    , records
                    , type-functions
                    , kinds
                    , storable-tuple
                    , array
                    , text
