Name:                probably
Version:             0.1.1
Description:         Probability and Statistics
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Exposed-modules:     Math.Probably.Sampler,
                     Math.Probably.FoldingStats,
                     Math.Probably.Student,
                     Math.Probably.PlotR,
                     Math.Probably.ChunkedArray,
		     Math.Probably.PDF,
		     Math.Probably.StochFun,
		     Math.Probably.Visualise,
		     Math.Probably.MCMC,
		     Math.Probably.KMeans,
		     Math.Probably.GlobalRandoms,
		     Math.Probably.JAGS

			
Build-depends:       base, uvector, mersenne-random, hstats, statistics-fusion, 
                     random, directory, process, tnutils, mtl, fad, binary