Name:                probably
Version:             0.2
Description:         Library for Probability and Statistics.
                     .
		     'probably' contains definitions and functions for probabilistic and statistical
                     inference.
                     .
                     * Math.Probably.Sampler defines the sampling function monad, as described by Sungwoo Park
                       and implemented elsewhere (e.g. 'random-fu' and 'monte-carlo' packages)
                     .
                     * Math.Probably.PDF defines some common parametric log-probability density functions
                     .
                     * Math.Probably.LinearPDF as above but in linear space
                     .
                     * Math.Probably.FoldingStats defines statistics as folds that can be composed and calculated 
                       independently of the container of the underlying data. 
                     .
                     * Math.Probably.StochFun defines stochastic functions and Markov chains
                     .
                     * Math.Probably.MCMC implements Markov Chain Monte Carlo, including importance,
                      rejection and Metropolis-Hastings sampling
      
                     
License:             GPL
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Exposed-modules:     Math.Probably.Sampler,
                     Math.Probably.FoldingStats,
                     Math.Probably.Student,
		     Math.Probably.PDF,
		     Math.Probably.LinearPDF,
		     Math.Probably.StochFun,
		     Math.Probably.MCMC,
--		     Math.Probably.KMeans,
		     Math.Probably.GlobalRandoms
--		     Math.Probably.Distribution,
--		     Math.Probably.JAGS

			
Build-depends:       base, mersenne-random-pure64, 
                     binary, hmatrix