Name:                probably
Version:             0.2.0.2
Synopsis:            Probability and Statistics
Description:         Library for Probability and Statistics.
                     .
		     'probably' contains definitions and functions for probabilistic and statistical
                     inference.
                     .
                     * Math.Probably.Sampler defines the sampling function monad, as described by Sungwoo Park
                       and implemented elsewhere (e.g. 'random-fu' and 'monte-carlo' packages)
                     .
                     * Math.Probably.PDF defines some common parametric log-probability density functions
                     .
                     * Math.Probably.LinearPDF as above but in linear space
                     .
                     * Math.Probably.FoldingStats defines statistics as folds that can be composed and calculated 
                       independently of the container of the underlying data. 
                     .
                     * Math.Probably.StochFun defines stochastic functions and Markov chains
                     .
                     * Math.Probably.MCMC implements Markov Chain Monte Carlo, including importance,
                      rejection and Metropolis-Hastings sampling
      
                     
License:             GPL
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   ghc-options:         -O2
   Exposed-modules:     Math.Probably.Sampler,
                        Math.Probably.FoldingStats,
                        Math.Probably.Student,
                        Math.Probably.PDF,
                        Math.Probably.SDE,
                        Math.Probably.LinearPDF,
                        Math.Probably.StochFun,
                        Math.Probably.MCMC,
                        Math.Probably.KMeans,
                        Math.Probably.GlobalRandoms,
                        Math.Probably.Distribution,
                        Math.Probably.NelderMead,
                        Math.Probably.Unscented,
                        Math.Probably.IterLap,
--                   Math.Probably.JAGS
                        Math.Probably.RandIO,
                        Math.Probably.MALA

                        
   Build-depends:       base, mersenne-random-pure64, ad,
                        binary, hmatrix>=0.11.0.0, mtl, spoon, deepseq, statistics, vector

   ghc-prof-options:    -auto-all

Executable testMCMC
   Main-Is:           testMCMC.hs
   Build-depends:       base, mersenne-random-pure64, 
                        binary, hmatrix>=0.11.0.0, mtl, spoon, deepseq, statistics, vector,ad
   other-modules:       Math.Probably.Sampler,
                        Math.Probably.FoldingStats,
                        Math.Probably.Student,
                        Math.Probably.PDF,
                        Math.Probably.SDE,
                        Math.Probably.LinearPDF,
                        Math.Probably.StochFun,
                        Math.Probably.MCMC,
                        Math.Probably.KMeans,
                        Math.Probably.GlobalRandoms,
                        Math.Probably.Distribution,
                        Math.Probably.NelderMead,
                        Math.Probably.Unscented,
                        Math.Probably.IterLap,
--                      Math.Probably.JAGS
                        Math.Probably.RandIO,
                        Math.Probably.MALA
   ghc-prof-options:    -auto-all
   ghc-options:         -O2 
