
name:                ad-experiments
version:             0.1.0.0
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Basic, Utils
  build-depends:       base >=4.7 && <4.8
                     , containers
                     , data-fix
                     , data-reify
                     , data-reify-cse
                     , deepseq
                     , ad
                     , simple-reflect
                     , uniplate
                     , mwc-random

  default-language:    Haskell2010
